17-provisioners/nsg.tf
resource "azurerm_network_security_group" "nsg" {

  name                = "nsgminipro98989"
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name

  security_rule {
    name                       = "SSH"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"

    source_port_range          = "*"      # ← MISSING
    destination_port_range     = "22"

    source_address_prefix      = "*"
    destination_address_prefix = "*"      # ← ALSO REQUIRED
  }

  security_rule {
    name                       = "HTTP"
    priority                   = 1002
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"

    source_port_range          = "*"      # ← MISSING
    destination_port_range     = "80"

    source_address_prefix      = "*"
    destination_address_prefix = "*"      # ← ALSO REQUIRED
  }
}
